--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@
 
 name: MyWorkflow
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -20,13 +20,14 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-           - uses: actions/checkout@v2
-           - uses: actions/setup-node@v1
-             with:
-                 node-version: 14.16.1
-           - uses: actions/setup-java@v1
-             with:
-                 java-version: '11.x'
-
+  steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 14.16.1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '11.x'
+    # Runs a single command using the runners shell
+    - name: Install node.js packages
+      run: npm install
